--- a/src/main/webapp/toplist.html
+++ b/src/main/webapp/toplist.html
@@ -26,7 +26,7 @@
 		<!-- 引用js分页插件 -->
 		<script src="js/jqPaginator-1.2.0/dist/jqPaginator.min.js"></script>
 
-		<script src="index.js"></script>
+		<script src="js/index.js"></script>
 
 	</head>
 <body>
