--- a/src/main/webapp/singer.html
+++ b/src/main/webapp/singer.html
@@ -119,59 +119,41 @@
 	</div>
 	<!-- 拟态框结束 -->
 
+	
 	<!-- 头部代码START -->
 		<div class="contain-fluid index-header">
-		<div class="row">
-			<div class="col-lg-10 col-lg-offset-2 top-contain">
-				<h1 class="top-logo">
-					<a href="#">
-						<img src="img/logo.png">
-					</a>
-				</h1>	
-				
-				<!-- <div class="col-md-5 top-link-body">
-					<ul>
-						<li class="col-md-3  top-link-current">
-							<a href="#">音乐馆</a>
-						</li>
+			<div class="row">
+				<div class="col-md-offset-2 col-md-8 top-contain">
+					<h1 class="top-logo">
+						<a href="#">
+							<img src="img/logo.png">
 
-						<li class="col-md-3  top-link">
-							<a href="#">我的音乐</a>
-						</li>
+						</a>
 
-						<li class="col-md-4  top-link">
-							<a href="#">下载客户端</a>
-						</li>
+					</h1>	
+					
+					<div class="top-search col-md-4 col-md-offset-2 ">	
+						 <input type="text" class="form-control search-width" placeholder="Search">
+						 <button type="submit" class="btn btn-default float-left"> <i class="fa fa-search "></i></button>	
+					</div>
 
-						<li class="col-md-2  top-link">
-							<a href="#">VIP</a>
-						</li>
+					<div class=" col-md-1 top-login">
+						<button type="button" class="btn btn-default" data-toggle="modal" data-target="#login">登录</button>		
+					</div>
+				</div>
+
+				<div class="col-md-offset-3 col-md-6 top-menu">
+					<ul class="menu-link">
+						<li class="col-md-offset-2 col-md-2 top_subnav_item"><a href="index.html" class="top_item">首页</a></li>
+					<li class="col-md-2 top_subnav_item"><a href="singerlist.html" class="top_item_current ">歌手</a></li>
+					<li class="col-md-2 top_subnav_item"><a href="songlist.html" class="top_item">歌曲</a></li>
+					<li class="col-md-2 top_subnav_item"><a href="toplist.html" class="top_item">排行榜</a></li>
 					</ul>
-				</div> -->
 
-				<div class="top-search col-md-3 col-md-offset-3">			
-					 <input type="text" class="form-control search-width" placeholder="Search">
-					 <button type="submit" class="btn btn-default float-left"> <i class="fa fa-search "></i></button>
-				</div>
-
-				<div class="col-md-1 top-login">
-					<button type="button" class="btn btn-default" data-toggle="modal" data-target="#login">登录</button>
-				</div>
+				</div>		
 			</div>
 
-			<div class="col-md-offset-3 col-md-6 top-menu">
-				<ul class="menu-link">
-					<li class="col-md-2 "><a href="#" class="top_item">首页</a></li>
-					<li class="col-md-2"><a href="#" class="top_item">歌手</a></li>
-					<li class="col-md-2"><a href="#" class="top_item">排行榜</a></li>
-					<li class="col-md-2"><a href="#" class="top_item">分类</a></li>
-				</ul>
-
-			</div>	
-			
 		</div>
-
-	</div>
 	<!-- 头部代码END -->
 
 	<div class="main">
