--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -159,7 +159,19 @@
 		</div>
 
 		<div class="contain-fluid index-first-contain">
+
+			<div class="slide_page">
+				<div class="slide_left">
+					<a href="javascript:;" class="js_left"><i class="fa fa-angle-left fa-2x" style="color: white"></i></a>
+				</div>
+
+				<div class="slide_right">
+					<a href="javascript:;" class="js_right"><i class="fa fa-angle-right fa-2x" style="color: white"></i></a>
+				</div>
+			</div>
+
 			<div class="section-inner">
+
 				<div class="section-inner-title">
 					<h1 class="section-inner-font font-color-white">新歌首发</h1>
 				</div>
@@ -173,8 +185,8 @@
 				</div>
 
 				<div class=" section-inner-slide">
-					<ul class="">
-						<li class="section-slide-item">
+					<ul class="playlist-list">
+						<li class="section-slide-item" id="slide-body1">
 							<div class="playlist-cover-box link-white">
 								<div class="playlist-cover" id="slide1">
 									<a href="#">
@@ -261,10 +273,202 @@
 								</div>
 							</div>
 						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide5.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide6.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide7.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide8.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide9.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide10.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide11.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
+
+						<li class="section-slide-item">
+							<div class="playlist-cover-box link-white">
+								<div class="playlist-cover" id="slide4">
+									<a href="#">
+										<img src="img/slide12.jpg">
+										<i class="icon-play"></i>
+									</a>
+								</div>
+
+								<h4 class="playlist-title">
+									 <span>
+									  <a href="#"> ABC</a>
+
+									 </span>
+								</h4>
+
+								<div class="playlist-author">
+									<a href="#">author</a>
+								</div>
+							</div>
+						</li>
 					</ul>
 
 				</div>
+
 			</div>	
+
+			
+			<!-- <div class="mod_slide_action">
+				<div class="slide_action slide_action--left">
+					<a href="javascript:;" class="slide_action__btn slide_action__btn--left">
+						<i class="icon_txt">上一页</i>
+						<i class="slide_action__arrow slide_action__arrow--left"></i>
+					</a>
+				</div>
+
+				<div class="slide_action slide_action--right">
+					
+				</div>
+			</div> -->
+
 
 		</div>
 
